--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="project-list">
 
 
-  <div class="project">
+<!--   <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Zari3a</i><br>2025</div>
       <div class="project-description">New York City based rug making studio.<br><br>Art direction, visual identity</div>
@@ -63,7 +63,7 @@
       <img src="images/2.jpg" class="thumb" data-project="2" data-index="0" alt="">
       <img src="images/2b.jpg" class="thumb" data-project="2" data-index="1" alt="">
     </div>
-  </div>
+  </div> -->
 
 
   
