--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
       <div class="project-description">New York City based rug making studio.<br><br>Art direction, branding, website design, social media strategy <br> Web development by David Yates</div>
     </div>
    <div class="project-images" data-bg="white">
-      <img src="images/2.jpg" class="thumb" data-project="2" data-index="0" alt="">
-      <img src="images/2b.jpg" class="thumb" data-project="2" data-index="1" alt="">
+      <img src="images/izilda1.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
+      <img src="images/izilda2.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
+      <img src="images/izilda3.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
+
     </div>
   </div>
 
@@ -109,8 +111,8 @@
     </div>
     <div class="project-images" data-bg="white">
 <!--       <img src="images/tekwin.png" class="thumb" data-project="2" data-index="0" alt="">
- -->      <img src="images/tekwin1.jpg" class="thumb" data-project="2" data-index="1" alt="">
-      <img src="images/tekwin2.jpg" class="thumb" data-project="2" data-index="2" alt="">
+ -->  <img src="images/tekwin1.webp" class="thumb" data-project="2" data-index="1" alt="">
+      <img src="images/tekwin2.webp" class="thumb" data-project="2" data-index="2" alt="">
       <img src="images/tekwin3.png" class="thumb" data-project="2" data-index="3" alt="">
 
       <div id="tekwin-vid">     
@@ -147,9 +149,9 @@
       <div class="project-description">Mahjouba Initiative reflects on artist Eric van Hove’s hope to connect local craftsmen to the electric engine revolution while creating a community-developed consumer end product: an electric motorbike for the local market using mainly craft materials and skills, combined with 3D-printing. <br><br> Visual identity</div>
     </div>
     <div class="project-images" data-bg="white">
-      <img src="images/mahjouba1.jpg" class="thumb" data-project="2" data-index="0" alt="">
-      <img src="images/mahjouba2.jpg" class="thumb" data-project="2" data-index="2" alt="">
-      <img src="images/mahjouba3bis.png" class="thumb" data-project="2" data-index="2" alt="">
+      <img src="images/mahjouba1.webp" class="thumb" data-project="2" data-index="0" alt="">
+      <img src="images/mahjouba2.webp" class="thumb" data-project="2" data-index="2" alt="">
+      <img src="images/mahjouba3bis.webp" class="thumb" data-project="2" data-index="2" alt="">
 
       <img src="images/mahjouba4.jpg" class="thumb" data-project="2" data-index="3" alt="">
 
@@ -163,9 +165,9 @@
       <div class="project-description">Solo exhibition of multi-disciplinary artist Grocco a.k.a. Trick54 at DADA Marrakesh. <br><br>Visual identity, print design</div>
     </div>
     <div class="project-images" data-bg="#b5d6f0">
-      <img src="images/figura.jpg" class="thumb" data-project="2" data-index="0" alt="">
-      <img src="images/figura1.jpeg" class="thumb" data-project="2" data-index="1" alt="">
-      <img src="images/figura3.jpg" class="thumb" data-project="2" data-index="2" alt="">
+      <img src="images/figura.webp" class="thumb" data-project="2" data-index="0" alt="">
+      <img src="images/figura1.webp" class="thumb" data-project="2" data-index="1" alt="">
+      <img src="images/figura3.webp" class="thumb" data-project="2" data-index="2" alt="">
       <img src="images/figura4.jpg" class="thumb" data-project="2" data-index="2" alt="" style="border: 0.5px solid rgba(0, 0, 0, 0.8);">
     </div>
   </div>
@@ -220,8 +222,8 @@
     </div>
     <div class="project-images" data-bg="white">
       <img src="images/salma.png" class="thumb" data-project="2" data-index="0" alt="" style="border: 0.5px solid rgba(0, 0, 0, 0.5);">
-      <img src="images/salma2.png" class="thumb" data-project="2" data-index="0" alt="">
-      <img src="images/salma3.jpg" class="thumb" data-project="2" data-index="1" alt="">
+      <img src="images/salma2.webp" class="thumb" data-project="2" data-index="0" alt="">
+      <img src="images/salma3.webp" class="thumb" data-project="2" data-index="1" alt="">
     </div>
   </div>
 
@@ -264,7 +266,7 @@
       <div class="project-description">Solo exhibition of Casablanca based painter Faouzi Tazi. <br><br>Visual identity, editorial design</div>
     </div>
     <div class="project-images" data-bg="red">
-      <img src="images/anatomia1.jpg" class="thumb" data-project="2" data-index="0" alt="">
+      <img src="images/anatomia1.webp" class="thumb" data-project="2" data-index="0" alt="">
       <img src="images/anatomia2.jpg" class="thumb" data-project="2" data-index="0" alt="">
 
     </div>
