--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     tanqib khatti<br>
     fibre, type and ornament<br>
     casablanca, morocco<br><br>
-    hi@tanqibkhatti.com
+    sophia.attigui@gmail.com
   </div>
 
   <div class="services">
