--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
       <div class="project-description">Booklet for exhibition "Berrechid 81: On the Energy of an Impeded Movement", part of the "School of Casablanca" research and art program that took place in November 2023 in Casablanca, Morocco and from February to May 2024 in Berlin, Germany. Collaborative exhbition initiated by Abdeslam Ziou Ziou in collaboration with Fatine Arafati, Sophia Attigui, Sofiane Byari, Grocco a.k.a. Trick54 and Said Rami.<br><br>Editorial design</div>
     </div>
     <div class="project-images" data-bg="green">
-      <img src="images/2.jpg" class="thumb" data-project="2" data-index="0" alt="">
-      <img src="images/2b.jpg" class="thumb" data-project="2" data-index="1" alt="">
+      <img src="images/b81.jpg" class="thumb" data-project="2" data-index="0" alt="" style="border: 0.5px solid rgba(0, 0, 0, 0.5);">
+      <img src="images/b812.webp" class="thumb" data-project="2" data-index="1" alt="">
     </div>
   </div>
 
