--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="HandheldFriendly" content="true">
 		<meta name="author" content="Sophia Attigui - Tanqib Khatti">
-		<meta name="description" content="Tanqib Khatti">
+		<meta name="description" content="Tanqib Khatti is the studio pratice of art director and designer Sophia Attigui.">
 		<meta name="keywords" content="Sophia Attigui, Sophia Att, Sophia Attigui design, Sophia Attigui graphic design, Sophia Attigui graphisme, Sophia Attigui work, Tanqib Khatti, Tanqib Khatti studio, Tanqib Khatti art direction, art direction casablanca, direction artistique maroc, graphisme maroc, graphiste maroc, graphiste casablanca">
 
 		<body>
