--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Izil Studio</i><br>2025</div>
-      <div class="project-description">New York City based rug making studio.<br><br>Art direction, branding, website design, social media strategy <br> Web development by David Yates</div>
+      <div class="project-description">New York City based rug making studio.<br><br>Art direction, branding, website design, social media strategy <br> <br>Web development by David Yates</div>
     </div>
    <div class="project-images" data-bg="white">
       <img src="images/izilda1.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
@@ -291,7 +291,7 @@
       <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Cantará</i><br>2022</div>
-      <div class="project-description">Program founded by Fatine Arafati and Imane Djamil aiming at fostering artistic project making in the city of Tarfaya through an introduction to cultural engineering, entrepreneurship and multi-disciplinary art practices. <br><br>Visual identity, type design</div>
+      <div class="project-description">Program founded by Fatine Arafati and Imane Djamil aiming at fostering artistic project making in the city of Tarfaya through an introduction to cultural engineering, entrepreneurship and multi-disciplinary art practices. <br><br>Visual identity, custom lettering</div>
     </div>
     <div class="project-images" data-bg="white">
       <img src="images/cantara2.png" class="thumb" data-project="2" data-index="1" alt="">
@@ -325,6 +325,36 @@
     Your browser does not support the video tag.
   </video>
 </div>
+
+    </div>
+  </div>
+
+        <div class="project">
+    <div class="project-text">
+      <div class="project-title"><i>All is Full of Love</i><br>2018</div>
+      <div class="project-description">An animation from a while ago that still feels relevant to me now. Made upon returning from a trip in Iran where the LED signage culture is the most developped and extravagant I got to see.<br><br>Animation design, custom lettering</div>
+    </div>
+    <div class="project-images" data-bg="white">
+
+
+      <div id="tower-vid">     
+  <video 
+    class="thumb"
+    width="800px" 
+    height="auto" 
+    autoplay 
+    muted 
+    loop 
+    playsinline 
+    poster=""
+    preload="auto"
+    id="myVideo"
+  >
+    <source src="images/allisfulloflove.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
 
     </div>
   </div>
