--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="services">
     <span style="">services:</span><br>
-    art direction, branding, print design, web design, type design, spatial design, campaigns, photography<br>
+    art direction, branding, print design, web design, custom lettering, spatial design, campaigns, photography<br>
   </div>
 </div>
 
@@ -218,7 +218,7 @@
       <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Esther et Salma</i><br>2023</div>
-      <div class="project-description">Essaouira based cinema encounter platform founded and run by Catherine Becker. <br><br>Visual identity, type design, website design</div>
+      <div class="project-description">Essaouira based cinema encounter platform founded and run by Catherine Becker. <br><br>Visual identity, custom lettering, website design</div>
     </div>
     <div class="project-images" data-bg="white">
       <img src="images/salma.png" class="thumb" data-project="2" data-index="0" alt="" style="border: 0.5px solid rgba(0, 0, 0, 0.5);">
@@ -231,7 +231,7 @@
       <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Maqam.tv</i><br>2023</div>
-      <div class="project-description">Itinerant broadcast channel airing video content from parts of Africa and Asia online and offline. Maqam.tv is a research, archival and curatorial platform that widens towards a plethora of knowledge, cultural and art practices to tell stories; sometimes to tell them for the first time, sometimes to re-narrate them, sometimes to put them back into circulation.<br><br>Visual identity, type design, website design, website development<br><br><a href="http://maqamtv.com" target="_blank">Visit website</a></div>
+      <div class="project-description">Itinerant broadcast channel airing video content from parts of Africa and Asia online and offline. Maqam.tv is a research, archival and curatorial platform that widens towards a plethora of knowledge, cultural and art practices to tell stories; sometimes to tell them for the first time, sometimes to re-narrate them, sometimes to put them back into circulation.<br><br>Visual identity, custom lettering, website design, website development<br><br><a href="http://maqamtv.com" target="_blank">Visit website</a></div>
     </div>
     <div class="project-images" data-bg="white">
 
