--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
   </video>
 </div>
 
+      <img src="images/tekwin6.png" class="thumb" data-project="2" data-index="6" alt="">
 
       <img src="images/tekwin5.png" class="thumb" data-project="2" data-index="5" alt="">
 
