--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
     </div>
   </div> -->
 
+    <div class="project">
+    <div class="project-text">
+      <div class="project-title"><i>Zari3a</i><br>2025</div>
+      <div class="project-description">Research platform in agroecology, food and water issues based in Fondouq Lalla Aicha in the Old Medina of Rabat. <br><br>Visual identity</div>
+    </div>
+    <div class="project-images" data-bg="white">
+      <img src="images/zari3a1.png" class="thumb" data-project="2" data-index="0" alt="">
+      <img src="images/zari3a5.png" class="thumb" data-project="2" data-index="3" alt="">
+
+
+
+  <div class="second-row">
+    <img src="images/zari3a3.png" class="thumb" data-project="2" data-index="2" alt="">
+    <img src="images/zari3a4.png" class="thumb" data-project="2" data-index="2" alt="">
+  </div>  
+ 
+
+    </div>
+  </div>
+
+
 
   
   <div class="project">
@@ -93,10 +114,10 @@
   <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Izil Studio</i><br>2025</div>
-      <div class="project-description">New York City based rug making studio.<br><br>Art direction, branding, website design, social media strategy <br> <br>Web development by David Yates</div>
+      <div class="project-description">New York City based rug making studio.<br><br>Art direction, branding, custom lettering, website design, social media strategy</div>
     </div>
    <div class="project-images" data-bg="white">
-      <img src="images/izilda1.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
+      <img src="images/izilda1.jpg" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
       <img src="images/izilda2.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
       <img src="images/izilda3.webp" class="thumb thumb-small2" data-project="2" data-index="0" alt="">
 
@@ -107,11 +128,10 @@
   <div class="project">
     <div class="project-text">
       <div class="project-title"><i>Tekwin</i><br>2023</div>
-      <div class="project-description">Learning and exchange platform for operators in the electronic music industry run by non-profit organization 4S.<br><br>Visual identity</div>
+      <div class="project-description">Learning and exchange platform for operators in the electronic music industry run by non-profit organization 4S.<br><br>Visual identity, custom lettering</div>
     </div>
     <div class="project-images" data-bg="white">
-<!--       <img src="images/tekwin.png" class="thumb" data-project="2" data-index="0" alt="">
- -->  <img src="images/tekwin1.webp" class="thumb" data-project="2" data-index="1" alt="">
+      <img src="images/tekwin1.webp" class="thumb" data-project="2" data-index="1" alt="">
       <img src="images/tekwin2.webp" class="thumb" data-project="2" data-index="2" alt="">
       <img src="images/tekwin3.png" class="thumb" data-project="2" data-index="3" alt="">
 
@@ -135,6 +155,29 @@
 </div>
 
       <img src="images/tekwin6.png" class="thumb" data-project="2" data-index="6" alt="">
+
+
+<!--       <img src="images/tekwin8.jpg" class="thumb" data-project="2" data-index="5" alt="">
+ -->
+<!--             <div id="tekwin-vid">     
+  <video 
+  class="thumb"
+    width="300px" 
+    height="auto" 
+    autoplay 
+    muted 
+    loop 
+    playsinline 
+    poster=""
+    preload="auto"
+    id="myVideo"
+  >
+    <source src="images/tekwin7.mp4" type="video/mp4">
+    <source src="images/tekwin7.mp4" type="video/mov">
+    Your browser does not support the video tag.
+  </video>
+</div>
+ -->
 
       <img src="images/tekwin5.png" class="thumb" data-project="2" data-index="5" alt="">
 
