--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     tanqib khatti<br>
     fibre, type and ornament<br>
     casablanca, morocco<br><br>
-    sophia.attigui@gmail.com
+    studio practice of <a href="http://sophiaattigui.com" target="_blank">Sophia Attigui</a>
+    <br>sophia.attigui@gmail.com
   </div>
 
   <div class="services">
